function store
