# app/Http/Controllers/Controller.php
@@ -5,12 +5,19 @@ namespace App\Http\Controllers;
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
-    /**
-    * @OA\Info(
-    *    title="Swagger with Laravel",
-    *    version="1.0.0",
-    * )
-    */
+/**
+ * @OA\Info(
+ *   title="Swagger with Laravel",
+ *   version="1.0.0",
+ * )
+ *
+ * @OA\SecurityScheme(
+ *   securityScheme="bearerAuth",
+ *   type="http",
+ *   scheme="bearer",
+ *   bearerFormat="JWT",
+ * )
+ */
 class Controller extends BaseController
 {
     use AuthorizesRequests, ValidatesRequests;
