# storage/api-docs/api-docs.json
@@ -113,5 +113,14 @@
                 }
             }
         }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
+        }
     }
 }
